[gd_scene load_steps=6 format=2]

[ext_resource path="res://TextureCut/Sign.png" type="Texture" id=1]
[ext_resource path="res://Scene/SpeechBubble.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/MessageSign.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 1.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 8 )

[node name="MessageSign" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, 31 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="SpeechBubble" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -26 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
